Calculator final - no frills

--- a/index.html
+++ b/index.html
@@ -19,30 +19,70 @@
         </div>
     </header>
     <main>
-        <section class="main-section">
-            <img class="main-logo" src="assets/alchemy-logo.png"/>
             <h2>
-                Welcome to Alchemy Bootstrap!
-            </h2>
-
-            <content>
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
+                Welcome to Calculator
+            </h2> 
             <hr />
-            <p>
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aperiam repellendus similique consectetur voluptas facilis molestiae voluptates nobis error sapiente, ad, ipsa vero non, sint eligendi? Eos praesentium iusto magnam exercitationem.
-                Earum sunt voluptatibus molestias, sint voluptatum quos reiciendis. Id asperiores deleniti dolores provident, eius, nostrum aperiam vel, optio qui illo corrupti in. Eum quam, est nemo porro sapiente excepturi assumenda.
-                Rerum unde quidem maxime. Ullam, dolores labore molestias voluptatibus adipisci quod? Quaerat nihil inventore molestiae assumenda, voluptates vel necessitatibus eligendi? Accusamus ratione eligendi reprehenderit? Beatae incidunt molestias ea soluta nulla.
-                Fugiat quae soluta voluptate mollitia praesentium modi ex illo, autem assumenda, vel aliquam fugit possimus dolorem esse corporis ipsa! Voluptatem sapiente error non, ea optio suscipit quasi maxime nobis ex?
-                Et ipsa tenetur ullam ab nesciunt quas fugit velit impedit illum esse eligendi corporis culpa praesentium aspernatur ex sint veniam quidem, doloribus corrupti hic vitae. Eum neque ducimus omnis exercitationem?
-            </p>
+            <section>
+               <div class = "wrapper">
+                    <input id="add-input-one">
+                    +
+                    <input id="add-input-two">
+                    <button id ="add-button">Add</button>
+                    =
+                    <div id ="addition-result">Result</div>
+                </div>
 
-        </section>
+                <div class = "wrapper">
+                    <input id="subtract-input-one">
+                    -
+                    <input id="subtract-input-two">
+                    <button id ="subtract-button">Subtract</button>
+                    =
+                    <div id ="subtraction-result">Result</div>
+                </div>
+
+                <div class = "wrapper">
+                    <input id="multiply-input-one">
+                    x
+                    <input id="multiply-input-two">
+                    <button id ="multiply-button">Multiply</button>
+                    =
+                    <div id ="multiplication-result">Result</div>
+                </div>
+
+                <div class = "wrapper">
+                    <input id="divide-input-one">
+                    /
+                    <input id="divide-input-two">
+                    <button id ="divide-button">Divide</button>
+                    =
+                    <div id ="division-result">Result</div>
+                </div>
+
+               <!-- <div class = "calculation">
+                    
+                    <div><input id="input-one"> </div>
+
+                    <div class="dropdown">
+                        <button onclick="myFunction()" class="dropbtn">Dropdown</button>
+                        <div id="myDropdown" class="dropdown-content">
+                          <a href="#add">+</a>
+                          <a href="#subtract">-</a>
+                          <a href="#multiply">*</a>
+                          <a href="#divide">/</a>
+                        </div>
+                    </div>
+
+                    <div><input id="input-two"></div>
+
+                    <div><button id ="calculateButton">Calculate</button> =  </div>
+                    <div id ="calculationResult">Result</div>
+                </div>  -->
+
+
+            </section>
+
     </main>
     <footer>
         <div class="copy gutter-right">&copy; 2020 Alchemy Code Lab</div>
